--- a/Assignment-1/Yogurt.html
+++ b/Assignment-1/Yogurt.html
@@ -51,7 +51,7 @@
                 Cultured Non Fat Milk, Water, Strawberries, Less Than 1%: Natural & Artificial Flavors, Black Carrot Juice & Carmine (For Color), Modified Food Starch, Acesulfame Potassium, Sucralose, Fructose, Malic Acid, Potassium Sorbate (To Maintain Freshness), Yogurt Cultures L. Bulgaricus & S. Thermophilus.
                 </summary>
                 <br>
-                <p>Reviews</p>
+                <p><b>Reviews</b></p>
                 <audio controls>
                     <source src="Audio/DANNON LIGHT AND FIT CREME BRULEE REVIEW.mp3" type="audio/mp3">
                     Your browser does not support the audio tag.
