--- a/Assignment-6/catalog.html
+++ b/Assignment-6/catalog.html
@@ -22,50 +22,88 @@
         <h1 style="text-align: center;">Product Catalog</h1>
         <div class="product-grid">
             <div class="product-card">
-                <img src="images/XPS_15.png" alt="Dell XPS 15 with OLED screen" style = "width: 100%;">
-                <h2>Dell XPS 15</h2>
-                <p>The Dell XPS 15 (2022) is easily among the best laptops ever made, thanks to fantastic style, powerful performance, and respectable battery</p>
-                <br><br><br>
-                <p>Starting Price: $1999.99</p>
+                <img src="Images/Chobani.jpg" alt="Chobani" height="320px" width="240px">
+                <p>Chobani Zero Sugar Milk & Cookies Greek Yogurt - 4ct/5.3oz</p>
+                <summary>Ingredients:
+                    Ultra-Filtered Nonfat Milk (Ingredient Not Found In Regular Yogurt), Water, Skim Milk (Includes A Dietarily Insignificant Amount Of Sugar), Allulose (Includes A Dietarily Insignificant Amount Of Sugar), Contains 2% Or Less Of: Vanilla Bean, Natural Flavors, Tapioca Flour, Citrus Fiber, Guar Gum, Sea Salt, Stevia Leaf Extract (Reb M), Monk Fruit Extract, Citric Acid, Cultures. 6 Live And Active Cultures: S. Thermophilus, L. Bulgaricus, L. Acidophilus, Bifidus, L. Casei, And L. Rhamnosus.</summary> 
+                <br>
+                <p><b>Reviews</b></p>
+                <audio controls>
+                    <source src="Audio/Is Chobani Greek Yogurt Healthy-.mp3" type="audio/mp3">
+                    Your browser does not support the audio tag.
+                </audio>
             </div>
             <div class="product-card">
-                <img src="images/MacBook.png" alt="Macbook Air 15" style = "width: 100%">
-                <h2>MacBook Air 15</h2>
-                <p>Apple’s first big-screened MacBook Air addresses a long-standing need in the company’s laptop lineup. And it comes with zero surprises and no sticker shock.</p>
-                <br><br><br>
-                <p>Starting Price: $1299.99</p>
+                <img src="Images/oikios.jpg" alt="Oikos" height="320px" width="240px">
+                <p>Oikos Triple Zero 15g Protein, Nonfat Mixed Berry Greek Yogurt Cups, 5.3 oz, 4 Count</p>
+                <summary>Ingredients:
+                    Cultured Grade A Non Fat Milk, Water, Contains Less Than 1% Of Natural Flavors, Tapioca Starch, Vegetable Juice Concentrate (For Color), Stevia Leaf Extract, Lemon Juice Concentrate, Sea Salt, Vitamin D3, Yogurt Cultures: S. Thermophilus And L. Bulgaricus.</summary> 
+                    <br>
+                    <p><b>Reviews</b></p>
+                    <audio controls>
+                        <source src="Audio/Dannon Triple Zero Greek Yogurt- DO NOT BUY! See Description Link.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio> 
             </div>
             <div class="product-card">
-                <img src="images/Razer.png" alt="Razer Blade 15 Gaming Laptop" style = "width: 100%">
-                <h2>Razer Blade 15</h2>
-                <p>The Razer Blade 15 continues to occupy a desirable niche among gaming laptops, providing the kind of sturdiness and high-end visuals you’re more likely to see in a desktop computer, but in a compact and highly portable unit. What’s more, it feels premium and polished in every way, benefiting from years of Razer fine-tuning an exceptional feature list.</p>
-                <br><br><br>
-                <p>Starting Price: $1899.99</p>
+                <img src="Images/LightFitYogurt.jpg" alt="LightFitYogurt" height="320px" width="240px">
+                <p>Light + Fit Nonfat Gluten-Free Strawberry Greek Yogurt - 4ct/5.3oz Cups</p>
+                <summary>Ingredients:
+                    Cultured Non Fat Milk, Water, Strawberries, Less Than 1%: Natural & Artificial Flavors, Black Carrot Juice & Carmine (For Color), Modified Food Starch, Acesulfame Potassium, Sucralose, Fructose, Malic Acid, Potassium Sorbate (To Maintain Freshness), Yogurt Cultures L. Bulgaricus & S. Thermophilus.
+                    </summary>
+                    <br>
+                    <p><b>Reviews</b></p>
+                    <audio controls>
+                        <source src="Audio/DANNON LIGHT AND FIT CREME BRULEE REVIEW.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>  
             </div>
         </div>
         <br><br>
         <div class="product-grid">
             <div class="product-card">
-                <img src="images/iPhone.png" alt="iPhone" style = "width: 100%;">
-                <h2>iPhone 15 Pro Max</h2>
-                <p>The 15 Pro Max is Apple’s best big phone yet, offering more camera, more screen and longer battery life than other models. But it is the new titanium sides and decrease in weight that makes the biggest difference in day-to-day usage.</p>
-                <br><br><br>
-                <p>Starting Price: $1199.99</p>
+                <img src="Images/AlmondButterBars.png" alt="AlmondButterBars" height="320px" width="240px">
+                <p>Delicious Almond Butter Bars - Pack of 6</p>
+                <summary>Ingredients:
+                    Premium almond butter blended with wholesome ingredients to create a guilt-free and satisfying snack. 
+                    Our almond butter bars feature a harmonious combination of natural almond goodness, rolled oats, honey, 
+                    and a touch of sea salt for that perfect balance of sweet and savory. 
+                </summary>
+                <br>
+                
+                <audio controls>
+                    <source src="Audio/AlmondButterBars.mp3" type="audio/mp3">
+                    Your browser does not support the audio tag.
+                </audio>
             </div>
             <div class="product-card">
-                <img src="images/Google Pixel.png" alt="Google Pixel" style = "width: 100%">
-                <h2>Google Pixel 8</h2>
-                <p>Fun, helpful image editing features. Ever-increasing number of smart software perks. Good performance. Bright displays. Great cameras. Secure Face Unlock is back. Seven years of support includes software and parts.</p>
-                <br><br><br>
-                <p>Starting Price: $999.99</p>
+                <img src="Images/ElectrolyteInfusedWater.png" alt="ElectrolyteInfusedWater" height="320px" width="240px">
+                <p>Electrify your hydration routine with our Electrolyte-Infused Coconut Water!</p>
+                <summary>Ingredients:
+                    Pure Coconut Water, Electrolyte Blend (Sodium, Potassium, Magnesium), Natural Coconut Flavor, Citric Acid.
+                    Our coconut water is sourced from the finest coconuts, delivering a refreshing taste that's both hydrating and naturally sweet. 
+                    </summary>
+                <br>
+
+                    <p>Reviews</p>
+                    <audio controls>
+                        <source src="Audio/ElectolyteInfusedWater.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio>  
 
             </div>
             <div class="product-card">
-                <img src="images/Samsung.png" alt="Samsung Galaxy" style = "width: 100%">
-                <h2>Samsung Galaxy S23 Ultra</h2>
-                <p>The Samsung Galaxy S23 Ultra takes Samsung's flagship to the next level with a whopping 200MP camera and lots of other photography improvements. You also get a Qualcomm Snapdragon 8 Gen 2 chip for Galaxy for the fastest speed on Android and stellar battery life.</p>
-                <br><br><br>
-                <p>Starting Price: $1199.99</p>
+                <img src="Images/PlantPowderedProteinCookies.png" alt="PlantPowderedProteinCookies" height="320px" width="240px">
+                <p>Plant-Based Protein Cookies - 6ct/2.5oz</p>
+                <summary>Ingredients:
+                    Crafted with a blend of plant-powered goodness, our Plant-Based Protein Cookies are a delicious and nutritious treat. Each cookie features a medley of wholesome ingredients, including plant-based protein sources, whole grains, and natural sweeteners.
+                    You'll find a harmonious fusion of flavors, complemented by ingredients like almond flour, chia seeds, and coconut oil.</summary>
+                <br>
+                
+                    <audio controls>
+                        <source src="Audio/sea salt caramels.mp3" type="audio/mp3">
+                        Your browser does not support the audio tag.
+                    </audio> 
             </div>
         </div>
     </main>
