--- a/Assignment-6/index.html
+++ b/Assignment-6/index.html
@@ -21,7 +21,7 @@
         
         <!-- Main Content -->
         <main class="home-content">
-            <h1>Welcome to HealthStore</h1>
+            <h1>Welcome to HealthyStore</h1>
             <p>Your one-stop shop for healthy products</p>
     
             <div class="slideshow-container">
