--- a/Assignment-7/PartAcal.html
+++ b/Assignment-7/PartAcal.html
@@ -7,15 +7,83 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <title>Calculator</title>
     <style>
+      /* Style for the container */
       .container {
           width: 370px;
           margin: 0 auto;
           padding: 20px;
           border: 1px solid #ccc;
           border-radius: 5px;
+          background-color: #f9f9f9;
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       }
+
+      /* Style for the heading */
+      h1 {
+          text-align: center;
+      }
+
+      /* Style for the input labels */
+      label {
+          font-weight: bold;
+      }
+
+      /* Style for the input fields */
+      input[type="text"] {
+          width: 100%;
+          padding: 8px;
+          border-radius: 5px;
+          border: 1px solid #ccc;
+          box-sizing: border-box; /* Ensure padding and border are included in the width */
+      }
+
+      /* Style for the error messages */
       .error {
-        color: red;
+          color: red;
+          margin-top: 5px;
+      }
+
+      /* Style for the buttons */
+      button {
+          font-size: 16px;
+          padding: 10px 10px;
+          border-radius: 5px;
+          border: none;
+          cursor: pointer;
+          margin-right: 10px;
+          background-color: #4CAF50; /* Green */
+          color: white;
+      }
+
+      button:hover {
+          background-color: #45a049;
+      }
+
+      button:active {
+          background-color: #3e8e41;
+      }
+
+      /* Style for the result input */
+      #ans {
+          width: calc(100% - 20px); /* Adjust width to accommodate padding */
+          padding: 8px;
+          border-radius: 5px;
+          border: 1px solid #ccc;
+          margin-top: 10px;
+      }
+
+      /* Style for the error message for numbers */
+      #error_number {
+          margin-top: 10px;
+      }
+
+      /* Responsive styles */
+      @media screen and (max-width: 480px) {
+          .container {
+              width: 90%;
+          }
+      }
+
       }
 </style>
 </head>
