--- a/Assignment-7/PartBSW.html
+++ b/Assignment-7/PartBSW.html
@@ -11,23 +11,58 @@
             text-align: center;
         }
         
-        .time {
-            font-size: 32px;
-            margin: 20px;
-        }
-        
+
+        /* Style for the buttons */
         button {
             font-size: 18px;
             margin: 10px;
             padding: 10px 20px;
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
         }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        button:active {
+            background-color: #3e8e41;
+        }
+
+        /* Style for the stopwatch container */
         .watch {
-                width: 325px;
-                margin: 0 auto;
-                padding: 20px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-            }
+            width: 325px;
+            margin: 0 auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        }
+
+        /* Style for the time display */
+        .time {
+            font-size: 32px;
+            margin: 20px;
+            color: #333;
+        }
+
+        /* Style for the date input */
+        #datepicker {
+            font-size: 16px;
+            padding: 8px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        /* Style for the controls */
+        .controls {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
